--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "homepage": "https://feika.github.io/runecrafter",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
