--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-moving-text": "^0.0.7",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-useinterval": "^1.0.2",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
