--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-moving-text": "^0.0.7",
+    "react-numeric-input": "^2.2.3",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "react-useinterval": "^1.0.2",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
